# dontnote-rust

./: .env.template  .gitignore  Cargo.toml  README.md  database.db
api/: Cargo.toml
api/src/: auth.rs  context.rs  database.rs  errors.rs  lib.rs
api/src/auth/: auth_client.rs  authenticate.rs  claims.rs  errors.rs  mod.rs
api/src/graphql/: errors.rs  mod.rs  schema.rs
api/src/graphql/guards/: logged_user.rs  mod.rs
api/src/graphql/mutations/: create_note.rs  create_workspace.rs  join_workspace.rs  mod.rs  user_login.rs  user_register.rs
api/src/graphql/queries/: mod.rs  notes.rs  users.rs  workspaces.rs
api/src/graphql/types/: mod.rs  note.rs  user.rs  workspace.rs
config/: Cargo.toml
config/src/: config.rs
entity/: Cargo.toml
entity/src/entities/: mod.rs  note.rs  prelude.rs  user.rs  user_workspace.rs  workspace.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table_users.rs  m20230725_212714_crate_table_workspaces.rs  m20230725_213206_crate_table_user_workspace.rs  m20230726_034351_crate_table_notes.rs  m20230726_205734_rename_notes_created_by.rs
src/: main.rs
