[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-graphql = { version = "5.0.10", features = ["tokio", "uuid"] }
async-graphql-axum = "5.0.10"
anyhow = "1.0.72"
thiserror = "1.0.44"
biscuit = "0.6.0"
uuid = { version = "1.4.1", features = ["v4"] }
http = "0.2.9"
tracing = "0.1.37"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid"] }
futures = "0.3.28"
async-trait = "0.1.72"
entity = { path = "../entity" }
config = { path = "../config" }

[dependencies.axum]
version = "0.6.19"
features = ["macros"]